feat: code analysis

--- a/src/server/projects/detail/views/index.njk
+++ b/src/server/projects/detail/views/index.njk
@@ -218,23 +218,27 @@
         {% endif %}
       {% endset %}
 
-      {{ govukTabs({
-        items: [
-          {
-            id: "compliance",
-            label: "Service Standard compliance",
-            panel: {
-              html: complianceTabHtml
-            }
-          },
-          {
-            id: "engagement",
-            label: "Project engagement",
-            panel: {
-              html: engagementTabHtml
-            }
+      {% set tabItems = [
+        {
+          id: "compliance",
+          label: "Service Standard compliance",
+          panel: {
+            html: complianceTabHtml
           }
-        ]
+        },
+        {
+          id: "engagement",
+          label: "Project engagement",
+          panel: {
+            html: engagementTabHtml
+          }
+        }
+      ] %}
+
+
+
+      {{ govukTabs({
+        items: tabItems
       }) }}
 
     </div>
