--- a/src/server/projects/standards/views/assessment.njk
+++ b/src/server/projects/standards/views/assessment.njk
@@ -146,7 +146,7 @@
             },
             {
               value: "TBC",
-              text: "TBC",
+              text: "Pending",
               selected: selectedValues and selectedValues.status === "TBC"
             }
           ],
