assure-173 add filters

--- a/src/server/common/templates/layouts/page.njk
+++ b/src/server/common/templates/layouts/page.njk
@@ -18,6 +18,7 @@
 {% block head %}
   <link href="{{ getAssetPath('stylesheets/application.scss') }}" rel="stylesheet">
   <link rel="stylesheet" href="{{ getAssetPath('accessible-autocomplete.min.css') }}">
+  {% block pageStyles %}{% endblock %}
 {% endblock %}
 
 {% block skipLink %}
